# EcommXAI-integration

./: .spectral.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt
.github/workflows/: ci.yml
docs/: 00-choose-your-platform.md  README.md
docs/common/: go-live.md  register.md  your-domain.md
docs/zh/: api-reference.md  overview.md  quickstart.md  register.md
examples/merchant-starter-node/: README.md  docker-compose.commerce.yml  docker-compose.full.yml  package.json
examples/merchant-starter-node/src/: server.js
examples/merchant-starter-node/src/commerce/: data.js  routes.js
examples/merchant-starter-node/src/middleware/: auth.js
examples/merchant-starter-node/src/oauth/: jwt.js  pkce.js  routes.js  store.js
examples/merchant-starter-python/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.commerce.yml  docker-compose.full.yml  pyproject.toml
examples/merchant-starter-python/app/: auth.py  main.py
examples/merchant-starter-python/app/commerce/: data.py  routes.py
examples/merchant-starter-python/app/oauth/: jwt_signer.py  pkce.py  routes.py  store.py
openapi/: custom-rest.v1.yaml
